--- a/exercicioB.cbp
+++ b/exercicioB.cbp
@@ -31,9 +31,15 @@
 		<Compiler>
 			<Add option="-Wall" />
 		</Compiler>
+		<Unit filename="exercicioB.c">
+			<Option compilerVar="CC" />
+		</Unit>
+		<Unit filename="exercicioB.h" />
 		<Unit filename="main.c">
 			<Option compilerVar="CC" />
 		</Unit>
-		<Extensions />
+		<Extensions>
+			<lib_finder disable_auto="1" />
+		</Extensions>
 	</Project>
 </CodeBlocks_project_file>
